--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.38",
     "@material-ui/styles": "^4.8.2",
     "axios": "^0.19.0",
     "gatsby": "^2.18.12",
