--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/styles": "^4.8.2",
     "axios": "^0.19.0",
     "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.37",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-source-mongodb": "^2.1.27",
